deploy/kubernetes/20-services-core.yaml
apiVersion: v1
kind: Service
metadata:
  name: core
spec:
  selector:
    app: core
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: centrifugo
spec:
  selector:
    app: centrifugo
  ports:
    - name: client
      port: 8000
      targetPort: 8000
    - name: internal
      port: 9000
      targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: ingress
spec:
  selector:
    app: ingress
  ports:
    - name: http
      port: 8080
      targetPort: 8080
