deploy/kubernetes/20-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: core
spec:
  selector:
    app: core
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sse
spec:
  selector:
    app: sse-broker
  ports:
    - name: http
      port: 8088
      targetPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: ingress
spec:
  selector:
    app: ingress
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nlp-bot
spec:
  selector:
    app: nlp-bot
  ports:
    - name: http
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: story-bot
spec:
  selector:
    app: story-bot
  ports:
    - name: http
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: summary-bot
spec:
  selector:
    app: summary-bot
  ports:
    - name: http
      port: 8000
      targetPort: 8000
